--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <div>
                  
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">esqueci a senha    <i class="material-icons">mail</i></a>
+                    <a href="esqueci.html" class="botao">esqueci a senha    <i class="material-icons">mail</i></a>
 
                   </div>
                 </form>
